--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       name: spring-cloud-config-client
-      profile: dev
+      profile: prod
       uri: http://localhost:7001/
       label: master
